Fix jump link layout in schedule page

--- a/src/static/pycontw-2017/styles/_schedule.scss
+++ b/src/static/pycontw-2017/styles/_schedule.scss
@@ -30,7 +30,7 @@
         .quick-jump-link {
             display: inline-block;
             line-height: 125%;
-            margin-right: 0.5rem;
+            margin: 0 0.5rem 0.75rem 0;
             padding: 0.5rem 1rem;
             border-radius: 8px;
             background: $color-table-header-background;
